2024-07-18 error.txt
Ψ Compiling keymap with make -r -R -f builddefs/build_keyboard.mk -s KEYBOARD=planck/rev6_drop KEYMAP=wf KEYBOARD_FILESAFE=planck_rev6_drop TARGET=planck_rev6_drop_wf INTERMEDIATE_OUTPUT=.build/obj_planck_rev6_drop_wf VERBOSE=false COLOR=true SILENT=false QMK_BIN="qmk"


arm-none-eabi-gcc.exe (GCC) 12.2.0
Copyright (C) 2022 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

Compiling: quantum/keymap_introspection.c                                                          quantum/keymap_introspection.c: In function 'process_record_unicode':
quantum/keymap_introspection.c:19:9: error: static declaration of 'keymap_layer_count_raw' follows non-static declaration
   19 | uint8_t keymap_layer_count_raw(void) {
      |         ^~~~~~~~~~~~~~~~~~~~~~
In file included from quantum/keymap_introspection.c:12:
quantum/keymap_introspection.h:12:9: note: previous declaration of 'keymap_layer_count_raw' with type 'uint8_t(void)' {aka 'unsigned char(void)'}
   12 | uint8_t keymap_layer_count_raw(void);
      |         ^~~~~~~~~~~~~~~~~~~~~~
quantum/keymap_introspection.c:23:31: error: weak declaration of 'keymap_layer_count' must be public
   23 | __attribute__((weak)) uint8_t keymap_layer_count(void) {
      |                               ^~~~~~~~~~~~~~~~~~
quantum/keymap_introspection.c:23:31: error: static declaration of 'keymap_layer_count' follows non-static declaration
quantum/keymap_introspection.h:14:9: note: previous declaration of 'keymap_layer_count' with type 'uint8_t(void)' {aka 'unsigned char(void)'}
   14 | uint8_t keymap_layer_count(void);
      |         ^~~~~~~~~~~~~~~~~~
quantum/keymap_introspection.c:33:10: error: static declaration of 'keycode_at_keymap_location_raw' follows non-static declaration
   33 | uint16_t keycode_at_keymap_location_raw(uint8_t layer_num, uint8_t row, uint8_t column) {
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
quantum/keymap_introspection.h:17:10: note: previous declaration of 'keycode_at_keymap_location_raw' with type 'uint16_t(uint8_t,  uint8_t,  uint8_t)' {aka 'short unsigned int(unsigned char,  unsigned char,  unsigned char)'}
   17 | uint16_t keycode_at_keymap_location_raw(uint8_t layer_num, uint8_t row, uint8_t column);
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
quantum/keymap_introspection.c:40:32: error: weak declaration of 'keycode_at_keymap_location' must be public
   40 | __attribute__((weak)) uint16_t keycode_at_keymap_location(uint8_t layer_num, uint8_t row, uint8_t column) {
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~
quantum/keymap_introspection.c:40:32: error: static declaration of 'keycode_at_keymap_location' follows non-static declaration
quantum/keymap_introspection.h:19:10: note: previous declaration of 'keycode_at_keymap_location' with type 'uint16_t(uint8_t,  uint8_t,  uint8_t)' {aka 'short unsigned int(unsigned char,  unsigned char,  unsigned char)'}
   19 | uint16_t keycode_at_keymap_location(uint8_t layer_num, uint8_t row, uint8_t column);
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~
quantum/keymap_introspection.c:97:10: error: static declaration of 'combo_count_raw' follows non-static declaration
   97 | uint16_t combo_count_raw(void) {
      |          ^~~~~~~~~~~~~~~
quantum/keymap_introspection.h:60:10: note: previous declaration of 'combo_count_raw' with type 'uint16_t(void)' {aka 'short unsigned int(void)'}
   60 | uint16_t combo_count_raw(void);
      |          ^~~~~~~~~~~~~~~
quantum/keymap_introspection.c: In function 'combo_count_raw':
quantum/keymap_introspection.c:98:40: error: invalid application of 'sizeof' to incomplete type 'combo_t'
   98 |     return sizeof(key_combos) / sizeof(combo_t);
      |                                        ^~~~~~~
quantum/keymap_introspection.c:98:31: error: expression does not compute the number of elements in this array; element type is 'combo_t', not 'combo_t' [-Werror=sizeof-array-div]
   98 |     return sizeof(key_combos) / sizeof(combo_t);
      |                               ^
quantum/keymap_introspection.c:98:31: note: add parentheses around the second 'sizeof' to silence this warning
In file included from quantum/keymap_introspection.c:5:
./keyboards/planck/keymaps/wf/keymap.c:392:9: note: array 'key_combos' declared here
  392 | combo_t key_combos[COMBO_COUNT] = {
      |         ^~~~~~~~~~
quantum/keymap_introspection.c: In function 'process_record_unicode':
quantum/keymap_introspection.c:100:32: error: weak declaration of 'combo_count' must be public
  100 | __attribute__((weak)) uint16_t combo_count(void) {
      |                                ^~~~~~~~~~~
quantum/keymap_introspection.c:100:32: error: static declaration of 'combo_count' follows non-static declaration
quantum/keymap_introspection.h:62:10: note: previous declaration of 'combo_count' with type 'uint16_t(void)' {aka 'short unsigned int(void)'}
   62 | uint16_t combo_count(void);
      |          ^~~~~~~~~~~
quantum/keymap_introspection.c:104:10: error: static declaration of 'combo_get_raw' follows non-static declaration

  104 | combo_t* combo_get_raw(uint16_t combo_idx) {
      |          ^~~~~~~~~~~~~
quantum/keymap_introspection.h:65:10: note: previous declaration of 'combo_get_raw' with type 'combo_t *(uint16_t)' {aka 'combo_t *(short unsigned int)'}
   65 | combo_t* combo_get_raw(uint16_t combo_idx);
      |          ^~~~~~~~~~~~~
quantum/keymap_introspection.c: In function 'combo_get_raw':
quantum/keymap_introspection.c:105:12: error: returning 'combo_t *' from a function with incompatible return type 'combo_t *' [-Werror=incompatible-pointer-types]
  105 |     return &key_combos[combo_idx];
      |            ^~~~~~~~~~~~~~~~~~~~~~
quantum/keymap_introspection.c: In function 'process_record_unicode':
quantum/keymap_introspection.c:107:32: error: weak declaration of 'combo_get' must be public
  107 | __attribute__((weak)) combo_t* combo_get(uint16_t combo_idx) {
      |                                ^~~~~~~~~
quantum/keymap_introspection.c:107:32: error: static declaration of 'combo_get' follows non-static declaration
quantum/keymap_introspection.h:67:10: note: previous declaration of 'combo_get' with type 'combo_t *(uint16_t)' {aka 'combo_t *(short unsigned int)'}
   67 | combo_t* combo_get(uint16_t combo_idx);
      |          ^~~~~~~~~
quantum/keymap_introspection.c:109:1: error: expected declaration or statement at end of input
  109 | }
      | ^
./keyboards/planck/keymaps/wf/keymap.c:670:20: error: unused variable 'tap_dance_actions' [-Werror=unused-variable]
  670 | tap_dance_action_t tap_dance_actions[] = {
      |                    ^~~~~~~~~~~~~~~~~
quantum/keymap_introspection.c:112: error: control reaches end of non-void function [-Werror=return-type]
quantum/keymap_introspection.c: At top level:
quantum/keymap_introspection.c:107:32: error: 'combo_get' defined but not used [-Werror=unused-function]
  107 | __attribute__((weak)) combo_t* combo_get(uint16_t combo_idx) {
      |                                ^~~~~~~~~
quantum/keymap_introspection.c:100:32: error: 'combo_count' defined but not used [-Werror=unused-function]
  100 | __attribute__((weak)) uint16_t combo_count(void) {
      |                                ^~~~~~~~~~~
quantum/keymap_introspection.c:40:32: error: 'keycode_at_keymap_location' defined but not used [-Werror=unused-function]
   40 | __attribute__((weak)) uint16_t keycode_at_keymap_location(uint8_t layer_num, uint8_t row, uint8_t column) {
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~
quantum/keymap_introspection.c:23:31: error: 'keymap_layer_count' defined but not used [-Werror=unused-function]
   23 | __attribute__((weak)) uint8_t keymap_layer_count(void) {
      |                               ^~~~~~~~~~~~~~~~~~
./keyboards/planck/keymaps/wf/keymap.c:565:10: error: 'get_tapping_term' defined but not used [-Werror=unused-function]
  565 | uint16_t get_tapping_term(uint16_t keycode, keyrecord_t *record) {
      |          ^~~~~~~~~~~~~~~~
./keyboards/planck/keymaps/wf/keymap.c:519:6: error: 'autoshift_release_user' defined but not used [-Werror=unused-function]
  519 | void autoshift_release_user(uint16_t keycode, bool shifted, keyrecord_t *record) {
      |      ^~~~~~~~~~~~~~~~~~~~~~
./keyboards/planck/keymaps/wf/keymap.c:492:6: error: 'autoshift_press_user' defined but not used [-Werror=unused-function]
  492 | void autoshift_press_user(uint16_t keycode, bool shifted, keyrecord_t *record) {
      |      ^~~~~~~~~~~~~~~~~~~~
./keyboards/planck/keymaps/wf/keymap.c:468:6: error: 'get_custom_auto_shifted_key' defined but not used [-Werror=unused-function]
  468 | bool get_custom_auto_shifted_key(uint16_t keycode, keyrecord_t *record) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./keyboards/planck/keymaps/wf/keymap.c:433:6: error: 'encoder_update_user' defined but not used [-Werror=unused-function]
  433 | bool encoder_update_user(uint8_t index, bool clockwise) {
      |      ^~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
 [ERRORS]
 |
 |
 |
make: *** [builddefs/common_rules.mk:373: .build/obj_planck_rev6_drop_wf/quantum/keymap_introspection.o] Error 1